[package]
name = "grpc-actix"
version = "0.1.0"
authors = ["Theodore Cipicchio <okready@users.noreply.github.com>"]
description = "Actor-based gRPC client and server implementation"

[dependencies]
base64 = "0.9"
bytes = "0.4"
failure = "0.1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
log = "0.4"
parking_lot = "0.6"
prost = "0.4"

[dev-dependencies]
prost-derive = "0.4"
