[package]
name = "grpc-actix"
version = "0.1.0"
authors = ["Theodore Cipicchio <okready@users.noreply.github.com>", "Sascha Wise <me@saschawise.com>"]
description = "Actor-based gRPC client and server implementation"
license = "MIT"

[dependencies]
actix = "0.7"
base64 = "0.9"
bytes = "0.4"
failure = "0.1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
log = "0.4"
parking_lot = "0.6"
prost = "0.4"
thread-pool = { path = "../thread-pool" }

[dev-dependencies]
prost-derive = "0.4"
